wrap all links to images in an image proxy to avoid HTTPS warnings

--- a/public/assets/test.css
+++ b/public/assets/test.css
@@ -225,6 +225,9 @@
   margin-left: 0;
   padding-left: 12px;
 }
+.post-responses ul.comments > li .comment .comment-content img {
+  max-width: 100%;
+}
 
 .post-footer {
   padding-top: 20px;
